[package]
name = "nox"
description = "Nox Server + Mock Support"
license = "None (Private)"
repository = "https://github.com/oodx/nox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nox"
path = "src/main.rs"


[dependencies]
# Core HTTP server
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = "0.6"
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }

# Error handling
thiserror = "2.0.16"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"
bytes = "1.0"

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# HTTP utilities
mime = "0.3"
mime_guess = "2.0"
http = "1.0"
http-body-util = "0.1"
url = "2.0"

# Templates and text processing
handlebars = { version = "4.0", optional = true }
regex = "1.0"

# Time and UUID
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.0", features = ["v4", "serde"], optional = true }

# Cookies and sessions
cookie = { version = "0.18", features = ["secure"], optional = true }

# Storage backends
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"], optional = true }
redis = { version = "0.24", optional = true }

# Utilities
base64 = "0.21"
rand = "0.8"

# File watching for hot reload
notify = { version = "6.0", optional = true }

# HTTP client for proxying
reqwest = { version = "0.11", features = ["json", "stream"], optional = true }

[features]
default = ["config"]
mvp = ["config"]
cookies = ["cookie"]
config = ["serde_yaml"]
timestamps = ["chrono"]
ids = ["uuid"]
storage = ["sqlite", "redis", "file-sessions", "timestamps", "ids"]
templates = ["handlebars"]
hot-reload = ["notify"]
proxy = ["reqwest"]
full = ["cookies", "config", "storage", "templates", "hot-reload", "proxy"]
sqlite = ["sqlx"]
redis = ["dep:redis"]
file-sessions = []

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
